--- a/themes/me/static/css/theme.css
+++ b/themes/me/static/css/theme.css
@@ -10,16 +10,20 @@
 
 body {
     font-family: 'Roboto', 'Open Sans', sans-serif;
-    font-size: 12pt;
-    font-weight: 500;
-    line-height: 25px;
-    color: #000000 !important;
+    font-size: 14pt;
+    font-weight: 400;
+    line-height: 23px;
+    color: #0e0e0e !important;
     background-color: #FeFeFe;
     -webkit-animation: fade 600ms 1 ease-in-out;
     -moz-animation: fade 600ms 1 ease-in-out;
     -ms-animation: fade 600ms 1 ease-in-out;
     -o-animation: fade 600ms 1 ease-in-out;
     animation: fade 600ms 1 ease-in-out;
+}
+
+code {
+    font-size: 12pt;
 }
 
 h1, h2, h3,
