--- a/themes/me/static/css/theme.css
+++ b/themes/me/static/css/theme.css
@@ -10,9 +10,9 @@
 
 body {
     font-family: 'Roboto', 'Open Sans', sans-serif;
-    font-size: 14pt;
+    font-size: 1.1em;
     font-weight: 400;
-    line-height: 23px;
+    line-height: 1.5em;
     color: #0e0e0e !important;
     background-color: #FeFeFe;
     -webkit-animation: fade 600ms 1 ease-in-out;
@@ -23,7 +23,7 @@ body {
 }
 
 code {
-    font-size: 12pt;
+    font-size: 1em;
 }
 
 h1, h2, h3,
