--- a/themes/me/static/css/theme.css
+++ b/themes/me/static/css/theme.css
@@ -13,7 +13,7 @@ body {
     font-size: 1.1em;
     font-weight: 400;
     line-height: 1.5em;
-    color: #0e0e0e !important;
+    color: #323232 !important;
     background-color: #FeFeFe;
     -webkit-animation: fade 600ms 1 ease-in-out;
     -moz-animation: fade 600ms 1 ease-in-out;
