--- a/themes/me/static/css/theme.css
+++ b/themes/me/static/css/theme.css
@@ -9,7 +9,7 @@
 @keyframes         fade {from {opacity: 0;} to { opacity: 1;}}
 
 body {
-    font-family: 'Roboto', 'Open Sans', sans-serif;
+    font-family: 'Lato', 'Open Sans', sans-serif;
     font-size: 1.1em;
     font-weight: 400;
     line-height: 1.7em;
