--- a/themes/me/templates/base.html
+++ b/themes/me/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
     <!--[if lte IE 8]><script type="text/javascript" src="{{ SITEURL }}/theme/js/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/skeleton.css" />
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic|Open+Sans:400italic,400,700,700italic' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Open+Sans:400italic,400,700,700italic' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/theme.css" />
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/pastie.css" />
 <!--    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic,300,300italic' rel='stylesheet' type='text/css' /> -->
