--- a/themes/me/templates/includes/sidebar.html
+++ b/themes/me/templates/includes/sidebar.html
@@ -21,6 +21,7 @@
               <li><a href="{{ SITEURL }}/categories.html">Categories</a></li>
               <li><a href="{{ SITEURL }}/tags.html">Tags</a></li>
               <li><a href="{{ SITEURL }}/archives.html">Archives</a></li>
+              <li><a href="{{ SITEURL }}/pages/about-me.html">About Me</a></li>
             </ul>
           </nav>
 
